--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -70,7 +70,14 @@
       <action-widget response="-3">file_chooser_ok</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkListStore" id="instruction_liststore"/>
+  <object class="GtkListStore" id="instruction_liststore">
+    <columns>
+      <!-- column-name instruction_view_address_data -->
+      <column type="gchararray"/>
+      <!-- column-name instruction_view_instruction_data -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">EmilPRO</property>
@@ -329,16 +336,18 @@
           <object class="GtkNotebook" id="tabs">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="margin_bottom">144</property>
+            <property name="vexpand">True</property>
             <child>
               <object class="GtkScrolledWindow" id="instruction_scrolled_window">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="vexpand">True</property>
                 <property name="shadow_type">in</property>
                 <child>
                   <object class="GtkTreeView" id="instruction_view">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="vexpand">True</property>
                     <property name="model">instruction_liststore</property>
                     <property name="headers_clickable">False</property>
                     <child internal-child="selection">
@@ -348,22 +357,23 @@
                       <object class="GtkTreeViewColumn" id="instruction_view_address">
                         <property name="sizing">autosize</property>
                         <property name="title" translatable="yes">Address</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkTreeViewColumn" id="instruction_view_backward">
-                        <property name="sizing">autosize</property>
-                        <property name="title" translatable="yes">b</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="instruction_view_address_text"/>
+                          <attributes>
+                            <attribute name="text">0</attribute>
+                          </attributes>
+                        </child>
                       </object>
                     </child>
                     <child>
                       <object class="GtkTreeViewColumn" id="instruction_view_instruction">
                         <property name="title" translatable="yes">Instruction</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkTreeViewColumn" id="instruction_view_forward">
-                        <property name="title" translatable="yes">f</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="instruction_view_instruction_text"/>
+                          <attributes>
+                            <attribute name="text">1</attribute>
+                          </attributes>
+                        </child>
                       </object>
                     </child>
                   </object>
