--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -74,8 +74,12 @@
     <columns>
       <!-- column-name instruction_view_address_data -->
       <column type="gchararray"/>
+      <!-- column-name instruction_view_b_data -->
+      <column type="GdkPixbuf"/>
       <!-- column-name instruction_view_instruction_data -->
       <column type="gchararray"/>
+      <!-- column-name instruction_view_f_data -->
+      <column type="GdkPixbuf"/>
     </columns>
   </object>
   <object class="GtkListStore" id="symbol_liststore">
@@ -389,12 +393,35 @@
                       </object>
                     </child>
                     <child>
+                      <object class="GtkTreeViewColumn" id="instruction_view_b">
+                        <property name="title" translatable="yes">b</property>
+                        <child>
+                          <object class="GtkCellRendererPixbuf" id="instruction_view_b_pix"/>
+                          <attributes>
+                            <attribute name="pixbuf">1</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkTreeViewColumn" id="instruction_view_instruction">
+                        <property name="min_width">300</property>
                         <property name="title" translatable="yes">Instruction</property>
                         <child>
                           <object class="GtkCellRendererText" id="instruction_view_instruction_text"/>
                           <attributes>
-                            <attribute name="text">1</attribute>
+                            <attribute name="text">2</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="instruction_view_f">
+                        <property name="title" translatable="yes">f</property>
+                        <child>
+                          <object class="GtkCellRendererPixbuf" id="instruction_view_f_pix"/>
+                          <attributes>
+                            <attribute name="pixbuf">3</attribute>
                           </attributes>
                         </child>
                       </object>
