--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -283,6 +283,7 @@
             <property name="orientation">vertical</property>
             <child>
               <object class="GtkPaned" id="symbol_insn_paned">
+                <property name="height_request">400</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="orientation">vertical</property>
@@ -468,28 +469,39 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSourceView" id="source_view">
-                <property name="height_request">100</property>
+              <object class="GtkScrolledWindow" id="source_view_scrolled_window">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="has_tooltip">True</property>
-                <property name="editable">False</property>
-                <property name="left_margin">2</property>
-                <property name="right_margin">2</property>
-                <property name="cursor_visible">False</property>
-                <property name="show_line_numbers">True</property>
-                <property name="tab_width">4</property>
-                <property name="auto_indent">True</property>
-                <property name="indent_on_tab">False</property>
+                <property name="vexpand">True</property>
+                <property name="hscrollbar_policy">never</property>
+                <property name="window_placement_set">True</property>
+                <property name="shadow_type">in</property>
+                <property name="min_content_height">100</property>
+                <property name="kinetic_scrolling">False</property>
+                <child>
+                  <object class="GtkSourceView" id="source_view">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="editable">False</property>
+                    <property name="left_margin">2</property>
+                    <property name="right_margin">2</property>
+                    <property name="show_line_numbers">True</property>
+                    <property name="tab_width">4</property>
+                    <property name="auto_indent">True</property>
+                    <property name="highlight_current_line">True</property>
+                    <property name="indent_on_tab">False</property>
+                  </object>
+                </child>
               </object>
               <packing>
-                <property name="resize">False</property>
-                <property name="shrink">True</property>
+                <property name="resize">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">2</property>
           </packing>
